--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@
     align-items: center;
     background-color: #333333;
     border-radius: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     cursor: pointer;
     margin-top: 2px;
