--- a/style.css
+++ b/style.css
@@ -310,6 +310,29 @@
     margin-bottom: 20px;
 }
 
+#sourceList {
+    width: 100%;
+    max-height: 400px;
+    min-height: 400px;
+    background-color: #222222;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+#sourceElem {
+    display: flex;
+    flex: 1;
+    background-color: #333333;
+    min-height: 30px;
+    max-height: 30px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    align-items: center;
+}
+
 .slide-enter-active {
     animation: slide .2s;
 }
@@ -319,8 +342,8 @@
 }
 
 @keyframes slide {
-  from {flex: 0};
-  to {flex: 90}
+  from {opacity: 0}
+  to {opacity: 100%}
 }
 
 [v-cloak] {
