--- a/style.css
+++ b/style.css
@@ -8,6 +8,22 @@
                                     supported by Chrome and Opera */
 }
 
+a:link {
+    color: #AA2222;
+    background-color: #222222;
+    border-radius: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+#articleColumn img {
+  height: auto;
+}
+
+#articleDescription.extended img:hover {
+    width: 800px;
+}
+
 #app {
   display: flex;
   flex: 1;
@@ -152,9 +168,11 @@
     flex-direction: column;
     overflow: hidden;
     overflow-y: auto;
+    transition: all 0.5s ease;
 }
 
 #feed.selected {
+    transition: all 0.5s ease;
     flex: 1;
 }
 
@@ -168,10 +186,12 @@
     background-color: #222222;
     color: white;
     padding: 5px;
+    transition: all 0.5s ease;
 }
 
 #feedElem.extended {
     min-height: 425px;
+    transition: all 0.5s ease;
 }
 
 #articleImage {
@@ -280,7 +300,7 @@
     align-self: center;
     align-items: center;
     justify-content: center;
-    font-size: 22px;
+    font-size: 26px;
     font-weight: bold;
     border-radius: 20px;
     cursor: pointer;
@@ -291,10 +311,12 @@
     flex: 0;
     flex-direction: column;
     overflow: hidden;
+    transition: all 0.5s ease;
 }
 
 #settings.selected {
     flex: 1;
+    transition: all 0.5s ease;
 }
 
 #closeSettings {
